# livetools

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.in  mkinstalldirs
doc/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/libliveir/: Makefile.am  Makefile.in  alsa_device.c  decoder.c  device.c  liveir.c  livetools.h  remotes.c
src/liveird/: Makefile.am  Makefile.in  liveird.c  liveird.h  main.c  msgsrv.c  msgsrv.h
src/plugins/: Makefile.am  Makefile.in
src/plugins/xmms_liveir/: Makefile.am  Makefile.in  about_liveir.c  configure_liveir.c  xmms_liveir.c  xmms_liveir.h
